--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    text-decoration: none;
 }
 
 :root {
@@ -14,6 +15,48 @@
 }
 
 body {
-    font-family: 'poppins';
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-family: 'poppins', Arial, Helvetica, sans-serif;
     background-color: var(--cor-fundo);
+    height: 100vh;
+}
+
+
+body div.borda {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid var(--cor-padrao);
+    border-radius: 50%;
+    width: 213px;
+    height: 213px;
+}
+
+body div.avatar img {
+    border-radius: 50%;
+    width: 100%;
+    max-width: 200px;
+}
+
+body span {
+    color: var(--cor-padrao);
+    font-weight: 400;
+    margin: 24px 0 24px 0;
+}
+
+body div.links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+body div.links a {
+    border: 2px solid var(--cor-padrao);
+    width: 326px;
+    height: 49px;
+    text-align: center;
 }
