--- a/assets/style.css
+++ b/assets/style.css
@@ -22,23 +22,49 @@ body {
     font-family: 'poppins', Arial, Helvetica, sans-serif;
     background-color: var(--cor-fundo);
     height: 100vh;
+
+    position: absolute;
 }
 
+body div.avatar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    z-index: 10;
+}
 
 body div.borda {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid var(--cor-padrao);
+    border: 3px solid var(--cor-padrao);
+    border-top: 3px solid transparent;
+    border-bottom: 3px solid transparent;
     border-radius: 50%;
     width: 213px;
     height: 213px;
+    
+    animation: girarBorda linear infinite 10s;
 }
 
 body div.avatar img {
+    position: absolute;
     border-radius: 50%;
     width: 100%;
     max-width: 200px;
+
+    z-index: 10;
+}
+
+@keyframes girarBorda {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 body span {
@@ -56,7 +82,30 @@ body div.links {
 
 body div.links a {
     border: 2px solid var(--cor-padrao);
+    color: var(--cor-padrao);
+    border-radius: 5px;
     width: 326px;
-    height: 49px;
+    padding: 11px 0;
+    margin: 0 0 16px 0;
     text-align: center;
+    text-transform: uppercase;
+    font-size: 1rem;
+    box-shadow: 0px 0px 3px 3px #00000011;
+}
+
+body div.socialMedia {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 29px;
+    margin: 52px 0 0 0;
+}
+
+body div.socialMedia img {
+    cursor: pointer;
+    transition: all .3s;
+}
+
+body div.socialMedia img:hover {
+    transform: scale(1.09);
 }
