--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,7 @@
     margin: 0;
     box-sizing: border-box;
     text-decoration: none;
+    font-family: 'poppins', Arial, Helvetica, sans-serif;
 }
 
 :root {
@@ -18,43 +19,33 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-    font-family: 'poppins', Arial, Helvetica, sans-serif;
-    background-color: var(--cor-fundo);
     height: 100vh;
-
-    position: absolute;
 }
 
-body div.avatar {
+section {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+}
+
+section .foto {
+    display: flex;
+    justify-content:center;
+    align-items: center;
 
     z-index: 10;
 }
 
-body div.borda {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 3px solid var(--cor-padrao);
-    border-top: 3px solid transparent;
-    border-bottom: 3px solid transparent;
-    border-radius: 50%;
-    width: 213px;
-    height: 213px;
-    
-    animation: girarBorda linear infinite 10s;
-}
-
-body div.avatar img {
+section div.borda {
+    border: 4px solid var(--cor-padrao);
+    border-top: 3px transparent;
+    border-bottom: 3px transparent;
+    width: 220px;
+    height: 220px;
+    animation: girarBorda linear infinite 8s;
     position: absolute;
     border-radius: 50%;
-    width: 100%;
-    max-width: 200px;
-
-    z-index: 10;
 }
 
 @keyframes girarBorda {
@@ -67,33 +58,42 @@ body div.avatar img {
     }
 }
 
-body span {
-    color: var(--cor-padrao);
-    font-weight: 400;
-    margin: 24px 0 24px 0;
+section div.foto img {
+    border-radius: 50%;
+    width: 100%;
+    max-width: 200px;
 }
 
-body div.links {
+
+section span {
+    margin: 24px 0 24px 0;
+    color: var(--cor-padrao);
+}
+
+section div.links {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
 
-body div.links a {
-    border: 2px solid var(--cor-padrao);
-    color: var(--cor-padrao);
+section div.links a {
+    border: 3px solid var(--cor-padrao);
     border-radius: 5px;
     width: 326px;
-    padding: 11px 0;
+    padding: 11px 0 11px 0;
     margin: 0 0 16px 0;
     text-align: center;
-    text-transform: uppercase;
-    font-size: 1rem;
-    box-shadow: 0px 0px 3px 3px #00000011;
+    color: var(--cor-padrao);
+
+    transition: all .3s;
 }
 
-body div.socialMedia {
+section div.links a:hover {
+    transform: scale(1.03);
+}
+
+section div.socialMedia {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -101,11 +101,11 @@ body div.socialMedia {
     margin: 52px 0 0 0;
 }
 
-body div.socialMedia img {
+section div.socialMedia img {
     cursor: pointer;
     transition: all .3s;
 }
 
-body div.socialMedia img:hover {
-    transform: scale(1.09);
+section div.socialMedia img:hover {
+    transform: scale(1.2);
 }
